# modsinstaller

./: .gitignore  .replit  README.md  main.py  modlist.txt  pyproject.toml  replit.nix
docs/: index.md
