[tool.poetry]
name = "modsinstaller"
version = "0.1.0"
description = "Downloads mc mods from curseforge"
authors = ["lochnessdragon <lochnessdragon@github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
requests = "^2.27.1"
wget = "^3.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"